feat: exclude workout from lists (#10)
