# server/src/open-api/fetch-client.ts
@@ -108,6 +108,8 @@ export type ActivityListResponseDtoOutput = {
     name: string | null;
     /** Activity description */
     description: string | null;
+    /** Exclude from rankings */
+    excludeFromRankings: boolean;
     /** Start time in ISO-8601 format */
     startedAt: string;
     /** Minutes east of UTC */
@@ -178,6 +180,8 @@ export type ActivityDetailDtoOutput = {
   name: string | null;
   /** Activity description */
   description: string | null;
+  /** Exclude from rankings */
+  excludeFromRankings: boolean;
   /** Start time in ISO-8601 format */
   startedAt: string;
   /** Minutes east of UTC */
@@ -224,6 +228,8 @@ export type ActivityUpdateDto = {
   name?: string | null;
   /** Description for the activity */
   description?: string | null;
+  /** Exclude from rankings */
+  excludeFromRankings?: boolean;
   sport?: ActivityUpdateDtoActivityType;
   /** Updated start time in ISO-8601 format */
   startedAt?: string;
@@ -238,6 +244,8 @@ export type ActivityDtoOutput = {
   name: string | null;
   /** Activity description */
   description: string | null;
+  /** Exclude from rankings */
+  excludeFromRankings: boolean;
   /** Start time in ISO-8601 format */
   startedAt: string;
   /** Minutes east of UTC */
